--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <div id="lightbox-overlay">
         <img src="" alt="확대 이미지" id="lightbox-image">
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
